--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/circle-cropped.png" alt="malcolm profile picture"></td>
+      <td><img src="Images/circle-cropped.png" alt="malcolm profile picture"></td>
       <td>  <h1>Malcolm Bisnauth</h1>
       <p><em>Christian and <strong>Graphic Designer</strong>.</em></p>
       <p>I am a Christian, that is also a graphic designer, learning to be a web developer in order to increase my financial capabilites<p></td>
